--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "osu-box",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "actions-toolkit": "^6.0.1",
     "dotenv": "^16.3.1",
