--- a/.github/workflows/osu-box.yml
+++ b/.github/workflows/osu-box.yml
@@ -11,10 +11,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: "lts/*"
+          cache: "npm"
 
       - name: Install dependencies
         run: npm install  
