--- a/.github/workflows/osu-box.yml
+++ b/.github/workflows/osu-box.yml
@@ -3,7 +3,9 @@ name: Update osu-stats gist
 on:
   schedule:
     - cron: "0 0 * * *"
-  workflow_dispatch:
+  push:
+    branches:
+      - main 
 
 jobs:
   build:
