--- a/.github/workflows/osu-box.yml
+++ b/.github/workflows/osu-box.yml
@@ -2,7 +2,7 @@ name: Update osu-stats gist
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "1 * * * *"
   push:
     branches:
       - main 
