--- a/.github/workflows/osu-box.yml
+++ b/.github/workflows/osu-box.yml
@@ -2,10 +2,7 @@ name: Update osu-stats gist
 
 on:
   schedule:
-    - cron: "0 0 * * *"
-  push:
-    branches:
-      - main 
+    - cron: "1 * * * *"
 
 jobs:
   build:
