--- a/.github/workflows/osu-box.yml
+++ b/.github/workflows/osu-box.yml
@@ -3,6 +3,10 @@ name: Update osu-stats gist
 on:
   schedule:
     - cron: "0 0 * * *"
+  push:
+    branches:
+      - main 
+  workflow_dispatch:
 
 jobs:
   build:
